--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://manaliyelapure.github.io/capstone",
-  "name": "my-app",
+  "name": "my-venia",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
